# cl-rust-generator

./: .gitignore  LICENSE  README.org  baseline_output.txt  cl-rust-generator.asd  package.lisp  rs.lisp  tests.lisp
.github/workflows/: release-19-webprox.yml  release-20-webprox-avif.yml
examples/: clean.sh
examples/01_gcd/: gen00.lisp
examples/01_gcd/rs01_gcd/: Cargo.toml  main.rs
examples/01_gcd/source/: run_01_base.rs
examples/02_webgcd/: gen00.lisp
examples/02_webgcd/rs02_webgcd/: Cargo.toml
examples/03_glium/: gen00.lisp
examples/04_azul/: gen00.lisp
examples/04_azul/rs04_azul/: Cargo.toml
examples/05_imgui/: gen00.lisp
examples/05_imgui/rs05_imgui/: Cargo.toml
examples/06_parallel_text/: README.org  gen00.lisp
examples/06_parallel_text/code/: Cargo.toml
examples/06_parallel_text/ff_txt_downloader/: collect_url.js  download.js  manifest.json
examples/07_glutin_gl/: gen00.lisp
examples/07_glutin_gl/code/: Cargo.toml
examples/08_glfw/: gen00.lisp
examples/08_glfw/code/: Cargo.toml
examples/09_wasm/: README.org  gen00.lisp
examples/09_wasm/code/: Cargo.toml
examples/09_wasm/code/src/: lib.rs
examples/10_wasm_webgl/: gen00.lisp
examples/10_wasm_webgl/code/: Cargo.toml
examples/10_wasm_webgl/code/src/: lib.rs
examples/10_wasm_webgl/code/www/: index.html  index.js
examples/11_cuda/: gen00.lisp
examples/11_cuda/code/: Cargo.toml
examples/11_cuda/code/src/: main.rs
examples/12_imgui_wgpu/: gen00.lisp
examples/12_imgui_wgpu/code/: Cargo.toml
examples/13_vulkano/: README.org  gen00.lisp
examples/13_vulkano/code/: Cargo.toml
examples/14_list/a_linked_list/: Cargo.toml  setup04_format.sh
examples/15_fltk/a_fltk/: Cargo.toml  Cargo.toml~
examples/16_egui/egui_min_native_x11/: Cargo.toml  Cargo.toml~  README.md
examples/17_eye_dome_lighting_cloud/source0/: Cargo.toml
examples/17_eye_dome_lighting_cloud/source0/src/: main.rs
examples/17_eye_dome_lighting_cloud/source1/edl_mindep/: Cargo.toml
examples/17_eye_dome_lighting_cloud/source1/edl_mindep/src/: main.rs
examples/18_min/01_nostd/: Cargo.toml  Cargo.toml~  setup01_build.sh
examples/18_min/02_onlystd/: Cargo.toml  setup01_build.sh
examples/18_min/02_onlystd/src/: main.rs
examples/18_min/src/: main.rs
examples/19_webprox/: CHANGELOG.md  Cargo.toml  README.md  hn.html  plan.md  rust_grpc_remote_browser_proxy.md  rust_grpc_web_browser_interface.md  setup01_build.sh  setup02_clean.sh
examples/19_webprox/chrome-test/: Cargo.toml
examples/19_webprox/cloud-proxy-server/: Cargo.toml
examples/19_webprox/cloud-proxy-server/examples/: test_client.rs  test_extract.rs
examples/19_webprox/cloud-proxy-server/src/: browser.rs  compressor.rs  config.rs  differ.rs  extractor.rs  input.rs  lib.rs  main.rs  service.rs  session.rs  throttle.rs
examples/19_webprox/cloud-proxy-server/tests/: integration.rs
examples/19_webprox/minimal-tui-client/: Cargo.toml
examples/19_webprox/minimal-tui-client/src/: connection.rs  echo.rs  input.rs  main.rs  renderer.rs  state.rs
examples/20_webprox_avif/: .gitignore  01_goal.md  02_plan.md  02_plan_draft.md  03_plan.md  04_implementation_plan.md  05_architecture_and_validation.md  06_implementation_deviation.md  07_plan.md  08_iced_migration_success.md  09_client_thread_plan.md  10_latency.md  11_latency_rav1e_settings.md  12_refactor.md  13_housekeeping.md  Cargo.toml  README.md  SCRIPTS.md  analyze_benchmarks.sh  benchmark_balanced.sh  benchmark_fast.sh  benchmark_quality.sh  benchmark_ultra.sh  calibration.html  cleanup.sh  debug_avif.rs  on_latency.md  run_gui_client.sh  run_latency_tests.sh  screenshot_client.sh  scroll_latency_implementation.md  start-fresh.sh  start_client.sh  start_client_release.sh  start_server.sh  start_server_release.sh  test_scroll_latency.sh  test_scroll_latency_dev.sh
examples/20_webprox_avif/avif_poc/: Cargo.toml
examples/20_webprox_avif/avif_poc/src/: main.rs
examples/20_webprox_avif/cloud-render-srv/: Cargo.toml
examples/20_webprox_avif/cloud-render-srv/src/: main.rs  server.rs
examples/20_webprox_avif/cloud-render-srv/src/browser/: cdp_stream.rs  chrome_runner.rs  dom_injection.rs  mod.rs
examples/20_webprox_avif/cloud-render-srv/src/encoder/: mod.rs  rav1e_enc.rs
examples/20_webprox_avif/cloud-render-srv/src/session/: 02_test_handler.rs  manager.rs  mod.rs  test_handler.rs
examples/20_webprox_avif/cloud-render-srv/src/video/: encoder.rs
examples/20_webprox_avif/core-utils/: Cargo.toml
examples/20_webprox_avif/core-utils/src/: lib.rs  logging.rs
examples/20_webprox_avif/doc/: integration-test-guide.md  on_latency.md  on_latency2.md  release_procedure.md
examples/20_webprox_avif/iced-client/: Cargo.toml
examples/20_webprox_avif/iced-client/src/: canvas_renderer.rs  decoder.rs  decoder_simple.rs  grpc_client.rs  main.rs  main_basic.rs  main_server.rs  main_simple.rs  main_working.rs
examples/20_webprox_avif/macroquad-client/: Cargo.toml
examples/20_webprox_avif/macroquad-client/src/: main.rs  state.rs
examples/20_webprox_avif/macroquad-client/src/integration_test/: cli.rs  comparison.rs  image_loader.rs  mod.rs  reporter.rs  test_runner.rs
examples/20_webprox_avif/macroquad-client/src/network/: 01_connection_manager.rs  02_stream_handler.rs  connection_manager.rs  grpc_client.rs  mod.rs  stream_handler.rs
examples/20_webprox_avif/macroquad-client/src/render/: 01_main_loop.rs  02_ui.rs  03_input.rs  main_loop.rs  mod.rs  ui.rs
examples/20_webprox_avif/macroquad-client/src/video/: decoder.rs
examples/20_webprox_avif/prompt/: 001_thread.md  002_coordinates.md  002_response.md
examples/20_webprox_avif/proto-def/: Cargo.toml  README.md  build.rs
examples/20_webprox_avif/proto-def/proto/: browser_stream.proto
examples/20_webprox_avif/proto-def/src/: graphical_proxy.rs  lib.rs
examples/20_webprox_avif/scripts/: bump_version_and_tag.sh
prompts/01_refactor/: pro  result.md
prompts/02_coalton/: pro  result.md
src/: core.lisp  emitters.lisp  environment.lisp  package.lisp  parsers.lisp  registry.lisp  utils.lisp  vars.lisp
(+32 files in other folders)
