[workspace]
members = [
    "proto-def",
    "core-utils",
    "cloud-render-srv",
    "macroquad-client",
    "avif_poc",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = 1
