[package]
name = "code"
version = "0.1.0"
authors = ["Martin Kielhorn <kielhorn.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "*"
rustacuda_core = "*"
rustacuda_derive = "*"
chrono = "*"
