[package]
name = "edl_cloud"
version = "0.1.0"
authors = ["wolpumba@gmail.com"]

[dependencies]
glium = { version = "0.34", features = ["glutin-winit", "glutin_backend", "raw-window-handle", "winit"], default-features = false }
winit = { version = "0.28", features = ["x11"], default-features = false }
nalgebra = "0.32"
