[package]
name = "net_example"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3      # Maximum speed optimizations (-O3)
lto = "fat"        # Maximum Link Time Optimization (cross-crate)
codegen-units = 1    # Maximize optimization scope (at cost of build speed)
panic = "abort"      # Remove stack unwinding code
strip = true         # Automatically strip symbols and debug info