[package]
name = "cloud-render-srv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.12" }
prost = "0.13"
rav1e = "0.7"
image = "0.25"
tokio-stream = { version = "0.1", features = ["sync"] }
core-utils = { path = "../core-utils" }
proto-def = { path = "../proto-def" }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chromiumoxide = "0.6"
base64 = "0.21"
anyhow = "1.0"
