[package]
name = "iced-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iced-client"
path = "src/main.rs"

[[bin]]
name = "iced-simple"
path = "src/main_simple.rs"

[[bin]]
name = "iced-working"
path = "src/main_working.rs"

[[bin]]
name = "iced-basic"
path = "src/main_basic.rs"

[features]
default = []
integration-test = []

[dependencies]
iced = { version = "0.13", features = ["tokio", "canvas", "image", "advanced"] }
iced_futures = { version = "0.13", features = ["tokio"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.12" }
prost = "0.13"
aom-decode = { git = "https://gitlab.com/kornelski/aom-decode", features = ["avif"] }
tokio-stream = { version = "0.1", features = ["sync"] }
core-utils = { path = "../core-utils" }
proto-def = { path = "../proto-def" }
clap = { version = "4.0", features = ["derive"] }
image = "0.25"
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
yuv = "0.1"
imgref = "1.10"
rgb = "0.8"
