[package]
name = "macroquad-client"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
miniquad = "0.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.12" }
prost = "0.13"
rav1d = { git = "https://github.com/memorysafety/rav1d" } # Or published crate if available
core-utils = { path = "../core-utils" }
proto-def = { path = "../proto-def" }
clap = { version = "4.0", features = ["derive"] }
image = "0.25"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yuv = "0.1"

# Remove [workspace]
