[package]
name = "edl_mindep"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.28", features = ["x11"], default-features = false }
glutin = { version = "0.30", features = ["glx"], default-features = false }
glutin-winit = { version = "0.3", features = ["glx"], default-features = false }
# Minimal Graphics & Math
glow = "0.13"
glam = "0.24"
